# bitbox02-bt-firmware

./: .gitattributes  .gitmodules  Dockerfile  Makefile  test.py
.ci/: ci
.github/workflows/: ci.yml
bitbox02-bt/: Cargo.toml  jlink-debug.gdb  jlink-release.gdb  vendor.sh
bitbox02-bt/.cargo/: config.toml
bitbox02-bt/src/: app.rs  app_impl.rs  ble.rs  peripherals.rs
bitbox02-bt/src/ble/: char_handlers.rs  config.rs
scripts/: docker_exec.sh  dockerenv.sh
u2fframing/: Cargo.toml
u2fframing/src/: lib.rs
